# MLOps_DTU_Course

./: .pre-commit-config.yaml  Makefile  README.md  data.dvc  model.pt  pyproject.toml  requirements.txt  requirements_tests.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yml
DTU_MLOps/: Makefile  README.md  pyproject.toml
DTU_MLOps/DTU_MLOps/: __init__.py
DTU_MLOps/docs/: mkdocs.yaml
DTU_MLOps/docs/source/: index.md
MLOps_DTU_project/: __init__.py  predict_model.py  train_model.py
MLOps_DTU_project/data/: make_dataset.py
MLOps_DTU_project/models/: dummu_test_chkpt.pth  model.py  trained_model_Session1.pt  trained_model_Session1.pth
MLOps_DTU_project/models/model_checkpoints/: trained_model_Session1.pth_04012024-170105  trained_model_Session1.pth_04012024-170802  trained_model_Session1_04012024-175402.pth
MLOps_DTU_project/visualizations/: visualize.py
S1_final_exercise/: checkpoint.pth  data.py  main.py  model.py  requirements.txt
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: __init__.py  test_data.py  test_model.py  test_training.py
